fix(raids): stop clipping toggle-group right border (#233)

--- a/Applications/Pgan.PoracleWebNet.App/ClientApp/src/app/modules/raids/raid-add-dialog.component.scss
+++ b/Applications/Pgan.PoracleWebNet.App/ClientApp/src/app/modules/raids/raid-add-dialog.component.scss
@@ -2,7 +2,6 @@ mat-dialog-content {
   min-width: min(400px, 100%);
   max-width: 600px;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 .alarm-tabs {
   margin: 0 -24px;
